app-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: svc-app
  namespace: kuma
spec:
  selector:
    name: kuma-app-pod
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
