ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuma-ingress
  namespace: kuma
  labels:
    name: kuma
  annotations:
    spec.ingressClassName: traefik
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - kuma
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: svc-app
                port:
                  number: 3001
